--- a/views/projects/issues/list.ejs
+++ b/views/projects/issues/list.ejs
@@ -408,7 +408,7 @@
                                     <% for (let i = 1; i <= pages; i++) { %>
                                     <li class="page-item <%= page == i ? 'active' : '' %>">
                                         <a class="page-link"
-                                            href="/projects<%= link.replace(`page=${parseInt(page)}`, `page=${i}`) %>">
+                                            href="/projects<%= urlPage.replace(`page=${parseInt(page)}`, `page=${i}`) %>">
                                             <%= i %>
                                         </a>
                                     </li>
