delete unused file

--- a/views/projects/issues/list.ejs
+++ b/views/projects/issues/list.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Issues Dasrboard</title>
+    <title>Issues Dashboard</title>
     <!-- <link rel="stylesheet" href=""> -->
     <% include ../../partials/head %>
     <style>
